--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: titles.home
-page.name: home
+title: Ame Digital - Documentação
+language: pt-br
 ---
-{% translate_file auth.md %}
-{% translate_file orders.md %}
-{% translate_file callback.md %}
+{% include /pt-br/auth.md %}
+{% include /pt-br/orders.md %}
+{% include /pt-br/callback.md %}
